✨ Onlineshopping app (two way binding,event handling,ngFor,ngClass)

--- a/DAY1/firstangularapp/src/app/app.component.html
+++ b/DAY1/firstangularapp/src/app/app.component.html
@@ -1,4 +1,6 @@
-<message [msgdetails]="firstMsg"></message>
+<div *ngFor="let m of messages">
+  <message [msgdetails]="m"></message>
+</div>
 <!-- <message
   msg="Hola"
   from="Bil"
