--- a/DAY1/firstangularapp/src/app/message.component.html
+++ b/DAY1/firstangularapp/src/app/message.component.html
@@ -4,7 +4,8 @@
   height="200px"
   width="300px"
 /> -->
-<img [src]="msgdetails.imageUrl" alt="">
+<img [src]="msgdetails.imageUrl" alt=""  height="200px"
+  width="300px">
 <h2>{{ msgdetails.msg }}</h2>
 <h4>From : {{ msgdetails.from }}</h4>
 <h4>To : {{ msgdetails.to }}</h4>
