✨ Services (using HttpClient), Basic Routing

--- a/DAY2/onlineshoppingapp/src/app/components/appcomponent/app.component.html
+++ b/DAY2/onlineshoppingapp/src/app/components/appcomponent/app.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-  <list-of-products></list-of-products>
+  <!-- <list-of-products></list-of-products> -->
+  <!-- <app-posts></app-posts> -->
+  <router-outlet></router-outlet>
 </div>
