✨ Adding NavBar & navigate to Product Details

--- a/DAY2/onlineshoppingapp/src/app/components/appcomponent/app.component.html
+++ b/DAY2/onlineshoppingapp/src/app/components/appcomponent/app.component.html
@@ -1,5 +1,8 @@
 <div class="container">
   <!-- <list-of-products></list-of-products> -->
   <!-- <app-posts></app-posts> -->
+  <!-- <a routerLink="/">Products</a> |
+  <a routerLink="/posts">Posts</a> -->
+  <app-nav-bar></app-nav-bar>
   <router-outlet></router-outlet>
 </div>
