✨ consuming routing parameters, NavBar & Json Server

--- a/DAY2/onlineshoppingapp/src/app/components/product/product.component.html
+++ b/DAY2/onlineshoppingapp/src/app/components/product/product.component.html
@@ -1,5 +1,5 @@
 <div [ngClass]="{ card: true, selected: isAddedToCart }">
-  <a routerLink="/productdetails">
+  <a routerLink="{{ 'productdetails/' + productdetails.id }}">
     <img
       [src]="productdetails.imageUrl"
       class="card-img-top"
