--- a/DAY2/onlineshoppingapp/src/app/components/product-details/product-details.component.html
+++ b/DAY2/onlineshoppingapp/src/app/components/product-details/product-details.component.html
@@ -3,6 +3,9 @@
     <img [src]="theProduct.imageUrl" [alt]="theProduct.title" width="100%" />
   </div>
   <div class="col-md-3">
+    <button class="btn btn-danger" (click)="DeleteProductById()">
+      Delete <i class="fa-solid fa-trash"></i>
+    </button>
     <h2>{{ theProduct.title }}</h2>
     <h4>₹. {{ theProduct.price }}</h4>
     <button class="btn btn-primary m-2">
